user table done

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://localhost:3306/easy_gift?serverTimezone=UTC
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 
+database=mysql
+spring.jpa.hibernate.ddl-auto=create-drop
+#spring.datasource.initialization-mode=always
+#spring.datasource.schema=classpath*:db/${database}/schema.sql
+#spring.datasource.data=classpath*:db/${database}/data.sql
