--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,24 @@
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.url=jdbc:mysql://localhost:3306/easy_gift?serverTimezone=UTC
-spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
-database=mysql
 spring.jpa.hibernate.ddl-auto=create-drop
-#spring.datasource.initialization-mode=always
-#spring.datasource.schema=classpath*:db/${database}/schema.sql
-#spring.datasource.data=classpath*:db/${database}/data.sql
+logging.level.org.hibernate.SQL=DEBUG
+spring.datasource.initialization-mode=always
+server.port = 1234
+
+#spring.jpa.hibernate.ddl-auto=none
+#logging.level.org.springframework.jdbc.datasource.init.ScriptUtils=debug
+#logging.level.org.hibernate.engine.jdbc.env.internal.LobCreatorBuilderImpl=error
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.h2.console.enabled=true
+# server.port = 1234
+#spring.h2.console.path=/h2-console
+
+
+
