complete project refactored according new front-end: deleted: user, userGift and related services

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.hibernate.ddl-auto=create-drop
 logging.level.org.hibernate.SQL=DEBUG
 spring.datasource.initialization-mode=always
-server.port = 1234
+#server.port = 1234
 
 #spring.jpa.hibernate.ddl-auto=none
 #logging.level.org.springframework.jdbc.datasource.init.ScriptUtils=debug
