--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,10 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
 spring.jpa.hibernate.ddl-auto=create-drop
 logging.level.org.hibernate.SQL=DEBUG
-spring.datasource.initialization-mode=always
+#spring.datasource.initialization-mode=always
+#spring.datasource.data=/data.sql
+#spring.datasource.initialization-mode=always
+
 #server.port = 1234
 
 #spring.jpa.hibernate.ddl-auto=none
