--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
 spring.jpa.hibernate.ddl-auto=create-drop
 logging.level.org.hibernate.SQL=DEBUG
+jwt.secret=simpsons;
 #spring.datasource.initialization-mode=always
 #spring.datasource.data=/data.sql
 #spring.datasource.initialization-mode=always
